Fix cards overlapping help button

--- a/src/frontend/boards/lc/index.scss
+++ b/src/frontend/boards/lc/index.scss
@@ -150,7 +150,7 @@ $gap: 10px;
 
   .help {
     position: fixed;
-    z-index: 1;
+    z-index: 300;
     right: $gap;
     top: $gap;
     background-color: $white;
